--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,27 @@
-html * {
-    font-family: 'Roboto', sans-serif;
+body, html {
+    height: 100%;
 }
 
-.background-pic {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 620px;
-    background-color: aqua;
-    background-image: url(images/background.png);
-    background-size: cover;
-    background-repeat: no-repeat;
+.hero-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/background.png);
+    height: 95%;
     background-position: center;
-    font-size: 600%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     color: white;
+}
+
+html * {
+    font-family: 'Roboto', sans-serif;
 }
 
 .shows {
@@ -54,6 +61,8 @@ em {
 
 .details {
     margin-left: -12rem;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 
 .btn {
